@@ -45,6 +45,7 @@ Commands:
    
 Fixes:
  * @cpattr and @mvattr could break attribute trees. Reported by Sketch. [MG]
+ * benchmark() calculated the average incorrectly. Reported by Cheetah. [DC]
 
 & 1.8.4p1
 Version 1.8.4 patchlevel 1                                 Sep 05,  2010
